--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
                         </div>
                         <p>Name: Lazar Petrovic</p>
                         <p>Index: 125/19</p>
-                        <p>Location: Obrenovac, Serbia</p>
+                        <p>Location: Serbia</p>
                         <p>C, C#, Javascript, HTML, CSS and SQL</p>
                     </div>
                 </article>
